# ml-analysis

./: .gitignore  .pre-commit-config.yaml  README.md  ct_jobscript.sh  pyproject.toml
analysis/: batchscript.sh  container.def  container_reqs.txt  ct_jobscript.sh  example_config.toml  extract_data_from_db.py  get_segments_from_db.py  interactive_fitting.py  jobscript.sh  make_interactive_plot.py  prepare_2layer_data.py  requirements.txt  run_2layer_inference.py  run_active_learning.py  run_multilayer_inference.py  settings.py  train_2layer_model.py  train_multilayer_model.py  voyage_dataset.py  voyage_hdf5_dataset.py
analysis/assets/: tooltip-styles.css
analysis/datasets/: __init__.py  helpers.py  voyage_dataset.py  voyage_hdf5_dataset.py
analysis/helpers/: data_preparation.py  settings.py
analysis/models/: __init__.py  coastal_voyage_model.py
analysis/run_scripts/: train_multilayer_model.py
container/: container.def  container_reqs.txt
